Some alignment fixed

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   padding-left: 1vw;
   width: 100%;
-  margin: -2.3vh;
+  margin: -3.3vh;
   font-family: sans-serif;
   font-size: 30px;
   background-color: #242526;
@@ -19,8 +19,6 @@ nav {
   display: flex;
   position: fixed;
   width: 100%;
-  top: 0px;
-  left: 0px;
   justify-content: space-evenly;
 }
 
@@ -45,11 +43,14 @@ nav {
   background-position: center;
   background-attachment: fixed;
   padding-top: 1.2rem;
+  
 }
 
 #img-logo {
-  height: 3rem;
-  padding-left: 2rem;
+    height: 3rem;
+    padding-left: 2rem;
+    border-radius: 50%;
+    padding-top: 8px;
 }
 
 .horizontal-list {
@@ -63,6 +64,7 @@ nav {
   margin: 0px 8px 8px 0px;
   font-weight: 100;
   font-size: 0.9rem;
+  padding-top: 1rem;
 }
 
 .horizontal-list li a {
@@ -437,12 +439,12 @@ button:focus {
 /* max-width is till that pixel from the left margin of HTML Document */
 
 @media only screen and (max-width: 768px) {
-  nav {
-    display: flex;
-    position: sticky;
-    width: 100%;
-    justify-content: space-evenly;
-    z-index: 99;
+
+  .text-center {
+    width: 80vw;
+    padding-left: 5vw;
+    font-size: medium;
+    text-align: center;
   }
 
   #contact-form {
